Fixed a bug in getting a player display name.